--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,9 +8,9 @@ environment:
   flutter: ">=1.17.0"
 
 dependencies:
-  # TODO: refactor imports to be from git
   super_base_app:
-    path: ../super_base_app
+    git:
+      url: https://github.com/Erluan/super_base_app
 
   flutter:
     sdk: flutter
